# minesweeper

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/minesweeper/: cell_type.hpp  grid.cpp  grid.hpp
src/util/: dynamic_matrix.hpp
test/minesweeper/: grid_test.cpp
